<resources>
    <string name="app_name">PioneerAsk</string>

    <string name="intro">Designed and Developed by Over9000 Team</string>
    <string name="hao">Hao Tu Lam</string>
    <string name="yi">Yi-Nong Wei</string>
    <string name="nischitha">Nischitha Chottanahalli Nagaraju</string>
    <string name="hu">Margaret Hu</string>

    <string name="i_m_searching_for">I\'m searching for...</string>
    <string name="comment_here">Comment here...</string>
    <string name="design_by"><![CDATA[Develop & Design By]]></string>
    <string name="school_q_a"><![CDATA[SCHOOL Q&A]]></string>
    <string name="confirm">Sign Up!</string>
    <string name="cancel">CANCEL</string>
    <string name="icon">Icon</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">Logo</string>
    <string name="question_title_topic">Question title/topic...</string>
    <string name="compose_logo">COMPOSE</string>
    <string name="question_s_content">Question\'s content</string>
    <string name="add_photo">Add Photo</string>
    <string name="submit">Submit</string>
    <string name="image">Image</string>
    <string name="post_back">Post Back</string>
    <string name="send">Send</string>
    <string name="my_posts">My Posts:</string>
    <string name="post_count">Post count:</string>
    <string name="profile_back">Profile Back</string>
    <string name="profile_image">Profile Image</string>
    <string name="search_button">Search Button</string>
    <string name="username">Username</string>
    <string name="comment">comment</string>
    <string name="question_title">Question title</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="edit_profile_button">Edit Profile Button</string>
    <string name="major_profession">Major/profession</string>
    <string name="edit_username">Username:</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_password">Password:</string>
    <string name="password">Password</string>
    <string name="edit_major_profession">Major/Profession:</string>
    <string name="graduation_year_experience">Graduation year/experience</string>
    <string name="edit_graduation_year_experience">Graduation Year/Experience:</string>
    <string name="introduction">Introduction:</string>
    <string name="something_about_yourself">Something about yourself...</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="image_attached">Image Attached</string>
    <string name="email_address">Email Address</string>
    <string name="year_of_experience_graduation">Year of Experience/Graduation</string>
    <string name="refresh">Refresh</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_should_be">Password should be</string>
    <string name="frame">Frame</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="minimum_one_uppercase">Minimum one uppercase</string>
    <string name="minimum_one_number">Minimum one number</string>
    <string name="say_something_about_yourself">Say something about yourself...</string>
    <string name="comments_from_my_posts">My comments:</string>
    <string name="comment_count">Comment count:</string>
    <string name="add_hyperlink">Add Hyperlink</string>
    <string name="hashtag_hint">(Optional) Enter tags. Maximum 3 tags</string>
    <string name="insert_your_hyperlink_below">Insert your hyperlink below:</string>
    <string name="add_to_favorite">Add to My Favourite</string>
    <string name="my_favorite_post">My Favorite Posts:</string>
    <string name="favorite_post_count">Favorite post count:</string>
    <string name="view_more">View More</string>


</resources>