<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F44336">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/ic_csueb_logo" />

    <ImageButton
        android:id="@+id/bttn_logout_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#F44336"
        android:contentDescription="@string/logout"
        app:srcCompat="@drawable/ic_logout_24" />

    <ImageButton
        android:id="@+id/bttn_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="#F44336"
        android:contentDescription="@string/profile"
        android:tint="#000000"
        app:srcCompat="@drawable/ic_baseline_account_30" />

</RelativeLayout>