<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/csueb_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/csueb_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bttn_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edge_button"
        android:backgroundTint="#F44336"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:onClick="handle_login"/>

    <Button
        android:id="@+id/bttn_signUp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edge_button"
        android:backgroundTint="#000000"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:onClick="handle_signUp"/>
</LinearLayout>