<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/commentItem_userImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_marginBottom="10dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/commentItem_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/commentItem_userImage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/commentItem_userImage"
        android:text="@string/username"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/comentItem_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/commentItem_username"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:textColor="#000000"
        tools:text="10d" />

    <TextView
        android:id="@+id/commentItem_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commentItem_userImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:text="@string/comment"
        android:textColor="#000000"
        android:autoLink="web|email"
        tools:text="There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. " />

    <ImageView
        android:id="@+id/commentItem_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commentItem_comment"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/todo"
        tools:srcCompat="@tools:sample/avatars" />

    <FrameLayout
        android:id="@+id/division_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/commentItem_image"
        android:layout_marginBottom="5dp"
        android:background="#807D7D">

    </FrameLayout>

</RelativeLayout>