<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/card_item"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivImage98"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/timeCreated98"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/profile_image"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvPostid98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:layout_toStartOf="@id/tv_Postvote98"
        android:layout_toEndOf="@id/ivImage98"
        android:gravity="center"
        android:paddingStart="5dp"
        android:textColor="@color/Black"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="Post Id:" />

    <TextView
        android:id="@+id/tvUsername98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivImage98"
        android:layout_alignEnd="@+id/ivImage98"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/Black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timeCreated98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPostid98"
        android:layout_toStartOf="@id/tv_Postvote98"
        android:layout_toEndOf="@id/ivImage98"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="10sp"
        tools:text="5d" />

    <TextView
        android:id="@+id/tvQuestion98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/timeCreated98"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/tv_Postvote98"
        android:layout_toEndOf="@+id/ivImage98"
        android:gravity="center"
        android:text="@string/question_title"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_Postvote98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeCreated98"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/round_edge_button"
        android:backgroundTint="#D85A5A"
        android:drawablePadding="5dp"
        android:drawableTint="@color/Black"
        android:gravity="center"
        android:paddingEnd="5dp"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:drawableLeftCompat="@drawable/ic_arrow_upward_24"
        tools:text="4" />

</RelativeLayout>